doc: add bearer token to equimament header requisition
